--- a/虚拟机.md
+++ b/虚拟机.md
@@ -1,4 +1,4 @@
-# 内存区域和内存溢出异常
+### 内存区域和内存溢出异常
 
 #### 运行时数据区域
 
@@ -72,6 +72,36 @@ java程序通过栈上的reference是数据来操作堆上的具体对象。refe
 
 - 句柄：Java堆中划分出一块内存来作为句柄池，reference当中存储的就是对象的句柄地址，句柄当中则包含了对象实例数据各自具体的地址信息。好处：对象被移动的时候只会改变句柄中的实例数据指针
 - 直接指针访问：reference中存储的直接就是对象地址。好处：速度更快
+
+### 垃圾收集器与内存分配策略
+
+#### 对象是否已死 
+
+##### 引用计数法
+
+在对象中添加一个引用计数器，每当有一个地方引用它时，计数器加一；当引用失效时，计数器就减一；计数器为零的对象就是不可能再被使用的。无法解决ABA问题
+
+##### 可达性分析
+
+通过一系列“GCroots”的根对象作为起始节点，从这节点开始根据引用关系向下搜索，搜索过程走过的路径称为引用链，如果某个对象到GC roots间没有任何引用链相连，则证明此对象是不可能再被使用的。
+
+可作为GCRoots的对象包括：
+
+- 虚拟机栈中（栈帧中的本地变量表）引用的对象，参数、局部变量表、临时变量等
+- 方法区中类静态属性引用的对象
+- 方法区中常量引用的对象
+- 本地方法栈中引用的对象
+- 虚拟机内部的引用，基本类型对应的Class对象，常驻的异常对象等
+- 同步锁 持有的对象
+
+##### 引用
+
+强引用、软引用、弱引用和虚引用：
+
++ 强引用指在程序都是代码之中普遍存在的引用赋值。只要强引用关系还存在，垃圾收集器就永远不会回收掉被引用的对象
++ 软引用是用来描述一些还有用，但是非必须的对象。只被软引用关联的对象，在系统将要的发生内存溢出异常前，会把这些对象列进回收范围之中进行第二次回收。如果回收后还没有足够的内存，才会抛出内存溢出异常。SoftReference类实现
++ 弱引用也是描述那些非必须对象。 弱引用关联的对象只能生存到下一次垃圾收集发生为止。当垃圾收集器开始工作，无论当前1内存是否足够，都会回收掉只被弱引用关联的对象。WeakReference类来实现
++ 虚引用，虚引用的存在无法影响对象的生存时间，也不能通过虚引用来获取对象实例。为一个对象设置虚引用关联的唯一目的只是为了能在这个对象被收集器回收时收到一个系统通知。PhantomReference实现
 
 
 
